--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -77,7 +77,7 @@ Notice how the data is grouped with ADHD, Mood disorders, and Individual Substan
 
 ## Data Characteristics
 
-```{r data}
+```{r read-data}
 # read data
 adhd_data <- read_excel("ADHD_data.xlsx", sheet = "Data") %>% na_if("") %>% dplyr::select(-1)
 #columns <- list(dimnames(adhd_data)[2])
@@ -91,7 +91,7 @@ The data contains `r adhd_data.dims[[1]]` observations of `r adhd_data.dims[[2]]
 
 We review one grouped variable set, known as mood disorders (MD), to show what we're working with. These contain a series of associated questions (Q1-Q3) with Q1 containing parts 'a' through 'm.'
 
-```{r}
+```{r md-data}
 adhd_data[,c(23:37)]
 ```
 Each part of Q1 'a' through 'm' corresponds with a specific question related to mood disorders for a single patient. In our feature engineering, it may be useful to tally these responses for a more holistic perspective of the patient's overall mood. We repeat this for the other groups to get an sense of the patient well-being which should provide insight into their risk of suicide.   
@@ -178,7 +178,7 @@ fa.diagram(md_ques_fa$loadings)
 In the next step we will remove all ADHD Question columns, ADHD Total, MD questions columns and MD TOTAL columns. Then we will add the new factors found above for ADHD and MD questions.
 
 
-```{r}
+```{r add-fact}
 # ADHD question scores dataframe
 adhd_ques_fa <- as.data.frame(adhd_ques_fa$scores) 
 names(adhd_ques_fa) <- c('ADHD_FACT1','ADHD_FACT2','ADHD_FACT3')
@@ -196,7 +196,7 @@ adhd_newdata <- cbind(adhd_newdata, adhd_ques_fa, md_ques_fa)
 
 Here is glimpse of new set of data.
 
-```{r}
+```{r head}
 head(adhd_newdata)
 ```
 
@@ -206,14 +206,14 @@ head(adhd_newdata)
 ## Handling missing values
 
 
-```{r}
+```{r plot-missing}
 # plot missing values
 plot_missing(adhd_newdata)
 ```
 
 We can see from this chart that `Psych meds.` contributes to 67.43% of missing data which is maximum among all missing data in other columns. We will remove this column before imputation. We then impute values using MICE (Multivariate Imputation by Chained Equations) for columns having missing values.
 
-```{r}
+```{r rename}
 # rename columns to apply mice
 adhd_newdata <- adhd_newdata %>% 
   rename('ADHD_Total'='ADHD Total',
@@ -242,7 +242,7 @@ summary(adhd_impute)
 
 
 
-```{r}
+```{r merge}
 # Merged the imputed dataframe with temp
 adhd_newdata <- cbind(adhd_impute, temp)
 head(adhd_newdata)
@@ -331,7 +331,7 @@ Groups:
 - All MD Questions
 
 
-```{r}
+```{r pca}
 # create subset of ADHD Questions for PCA
 adhd_ques_pca <- sapply(adhd_data[,c(4:21)], as.numeric)
 
@@ -346,7 +346,7 @@ md_ques_pca <- sapply(adhd_data[,c(23:37)], as.numeric)
 First we will use the prcomp function to perform a prinicpal component analysis on the adhd response questions. We will also center and scale this dataset to ensure normality.
 
 
-```{r}
+```{r prcomp}
 pca_adhd <- prcomp(adhd_ques_pca, scale. = TRUE, center=TRUE)
 
 ```
@@ -358,7 +358,7 @@ By viewing the associated plots and correlations we can see the ADHd response qu
 We can also see the factors that are most impactful for other principal components below.
 
 
-```{r}
+```{r corr}
 cor(adhd_ques_pca, pca_adhd$x[,1:10]) %>% 
   kableExtra::kbl(booktabs = T, caption ="ADHD Correlations") %>% 
   kable_styling(latex_options = c("striped"), full_width = F) 
@@ -394,7 +394,7 @@ We will repeat the process above on MD response questions to get a better unders
 we can see for PC1 and PC2 MD Q1h, 1j, 1g and Q2 have the greatest impact.
 
 ### MD
-```{r}
+```{r md-prcomp}
 pca_md <- prcomp(md_ques_pca, scale. = TRUE, center=TRUE)
 cor(md_ques_pca, pca_md$x[,1:10]) %>% 
   kableExtra::kbl(booktabs = T, caption ="md Correlations") %>% 
@@ -437,7 +437,7 @@ through your steps.
 
 We remove the rows null values in the target column and drop the Non-subset Dx column because it had a lot of nulls as well. XGBoost needs data to be in a matrix so we convert the dataframes to numeric matricies. 
 
-```{r}
+```{r gb}
 gb__train <-subset(training[complete.cases(training$Suicide), ], select= -`Non-subst Dx`)
 gb__test <-subset(testing[complete.cases(testing$Suicide), ], select= -`Non-subst Dx`)
 y_label_tr <- as.matrix(gb__train$Suicide)
@@ -453,7 +453,7 @@ We split the data into three folds for cross validation to imrove the ability of
 
 https://cran.r-project.org/web/packages/ParBayesianOptimization/vignettes/tuningHyperparameters.html
 
-```{r}
+```{r cv-spl}
 Folds <- list(
     Fold1 = as.integer(seq(1,nrow(gb__train),by = 3))
   , Fold2 = as.integer(seq(2,nrow(gb__train),by = 3))
@@ -490,7 +490,9 @@ scoringFunction <- function(max_depth, min_child_weight, subsample) {
 }
 
 ```
-```{r}
+
+
+```{r gb1}
 set.seed(50)
 bounds <- list( 
     max_depth = c(2L, 10L)
@@ -555,7 +557,7 @@ knn_model
 ```
 
 
-```{r}
+```{r knn-eval}
 # Evaluate Model
 plot(knn_model)
 knn_predict <- predict(knn_model, newdata = test_knn)
@@ -574,7 +576,7 @@ The objective of the support vector machine algorithm is to find a hyperplane in
 
 There are number of R packages available to implement SVM. The train function can be used for SVM using methods as svmRadial, svmLinear and svmPoly that fit different kernels.
 
-```{r}
+```{r train-test}
 # partitioning for train and test
 partition <- createDataPartition(adhd_transformed$Suicide, p=0.75, list = FALSE)
 training <- adhd_transformed[partition,]
@@ -582,7 +584,7 @@ testing <- adhd_transformed[-partition,]
 ```
 
 
-```{r}
+```{r svm}
 set.seed(622)
 
 # fit with svmLinear
@@ -622,7 +624,7 @@ cm_poly <- confusionMatrix(testing$Suicide, pred_poly_suicide)
 
 
 
-```{r}
+```{r svm-resam}
 #Compare 3 models:
 svm_resamps <- resamples(list(Linear = svm_lin_fit, Radial = svm_rad_fit, Poly = svm_poly_fit))
 summary(svm_resamps)
@@ -633,7 +635,7 @@ We can see out Support Vector Machine Linear, Radial, and Poly fit had median ac
 ## Gradient Boosted 
 
 We use the information from the above function to fit our final model, make predictions, and evaluate results.
-```{r}
+```{r grad-boost}
 dtrain <- xgb.DMatrix(gb__train, label=y_label_tr)
 dtest <- xgb.DMatrix(gb_test, label=y_label_test)
 xgb <- xgb.train(
