--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -97,7 +97,7 @@ adhd_data[,c(23:37)]
 
 Each part of Q1 'a' through 'm' corresponds with a specific question related to mood disorders for a single patient. In our feature engineering, it may be useful to tally these responses for a more holistic perspective of the patient's overall mood. We repeat this for the other groups to get an sense of the patient well-being which should provide insight into their risk of suicide.   
 
-We examine the distribution of responses. This will inform us if there are any questions that are overly represented, missing values, or in need of adjustments or transformations prior to modeling. Assuming that we factorize responses with clear levels, we visualize the results as bars for each level of each variable.  
+We examine the distribution of responses. This will inform us if there are any questions that are overly represented, missing values, or in need of adjustments or transformations prior to modeling. Assuming that we factorize responses that contain clear levels, we visualize the results as bars for each level of each variable.  
 
 
 ```{r, cat-bar, fig.length =20, fig.width=10}
@@ -113,46 +113,57 @@ ggplot(adhd_factm, aes(x = value)) +
   theme(legend.position = "none")
 ```
 
-The distributions of these values are spread somewhat evenly and should not require transformation at first glance. It is also clear that there are some missing values with various drug abuse reponses such as THC, Cocaine, Stimulants, Opioids, and more. 'Pschy Meds' med is clearly missing the most values, with nearly all of its values listed as 'NA.' Since there are few missing values relative to the number of observations in the dataset, any basic imputation method should limit the effect on our predictions. 
+The distributions of these values are spread somewhat evenly and should not require transformation at first glance. It is also clear that there are some missing values with various drug use reponses such as THC, Cocaine, Stimulants, Opioids, and more. 'Pschy Meds' med is missing the most values, with nearly all of its values listed as 'NA.' Since there are few missing values relative to the number of observations in the dataset, any basic imputation method should limit the effect on our predictions. 
 
-We can visually tell that the data leans in certain directions which may influence how generalizable our results can be. For example, responses only include two racial groups are included. 
-Adjustments may be necessary for some sub groups, for example in the responses of those with drug use, but the data are otherwise ready for use. 
+We can visually tell that the data leans in certain directions which may influence how generalizable our results can be. For example, responses only include two racial groups, 1 and 2 with 2 being the most prominent. The rest have so few values their results may be insignificant. The data also leans towards sex 1, of binary-gender categories. There are more unbalanced occurrences such as this in questions for mood, education, abuse, disorderly conduct, substance use, psych med, and our target variable suicide. 
 
+Adjustments may be necessary for some sub groups, for example in the responses of those with drug use, but the data are otherwise ready for use. We continue with a summary of the data. 
 
 
 ## Data summary
 
-
+We identify any clusters of patients' responses that appear to be imbalanced by counting the frequencies of responses by level. This will provide us percentages of the previous bar chart where we could only compare bar sizes. It also shows if there is any duplication in responses. 
 
 ```{r adhd_data_summary}
 dfSummary(adhd_data, style = 'grid', graph.col = FALSE)
 ```
 
-## Coorelation
+Through this table we now know that some groups are more representative than others in the responses. Racial makeup is certainly limited in this study. Age might also be a limiting factor when ensuring predictive accuracy. However, duplication is not an issue. There appear to be no duplicates and the frequencies are close enough to normal that we can build realistic models with the data as it is. This confirms our characteristics. 
+
+## Correlation
 
 Next we will see the correlation among ADHD questions and MD questions. As we can deduce from below 2 correlation plots, ADHD questions are highly correlated and MD questions comparatively shows moderate correlation.
+
+ADHD Correlation Plot:
 
 ```{r corr-adhds}
 adhds <- sapply(adhd_data[,c(4:21)], as.numeric) %>% cor()
 corrplot::corrplot(adhds, method="number")
 ```
 
+
+Mood Correlation Plot:
+
 ```{r corr-mds}
 mds <- sapply(adhd_data[,c(23:37)], as.numeric) %>% cor()
 corrplot::corrplot(mds, method="number")
 ```
 
+Within both groups, there are few, if any, particularly strong correlations that we could attribute to a patient's risk of suicide. Our most strongly correlated variables are found in the ADHD group which has a maximum correlation value of about 0.71 between Q7 and Q8. Everything else is lower but importantly, not zero. 
 
+These correlations imply that the presence of answers to ADHD questions has a slightly higher correlation on the patient's risk of attempting suicide. Mood disorders have a lower set of correlations values with its maximum around 0.60. Although, plenty of these values are close enough to 0, which indicates no correlation, that we can say they have little no connection with a patients risk of attempting suicide. 
 
 # Data Preparation
 
+Given our EDA, we start preparing the data for modeling by handling missing values, analyzing which factors and factor levels would be most beneficial to the models, then preprocess and transform the data to fit model parameters when appropriate. We also split the data into training and test data sets for evaluating model performance. To complete preparation, we perform a principal component analysis (PCA) to compliment our factor analysis.  
+
+
 ## Factor Analysis
 
-Like PCA, Factor Analysis too, reduces larger number of variables into smaller number of variables, called latent variables.It is used to identify underlying factors that explain the correlation among set of variables. Factor analysis is a great tool for treating multivariate questionnaire studies.
+In Factor Analysis the dimensions of the data are reduced by picking a number of variables that explain most of the variation in the data. Those variables that  are not used are called latent variables because their values are inferred from other variables. This will help us further 
+identify underlying factors that explain the correlation among the set of variables. Factor analysis is a great tool for treating multivariate questionnaire studies.
 
-For ADHD questions, test of the hypothesis that 3 factors are sufficient. The chi square statistic is 197.3 on 102 degrees of freedom. The p-value is 0.0000000476. We have used regression factor scores here as they predict the location of each individual on the factor.
-
-
+For ADHD questions, a test of the hypothesis determined that 3 factors are sufficient to explain the variation of the data. Our chi square statistic is 197.3 on 102 degrees of freedom. The p-value is 0.0000000476. Which, for our purposes, is higly significant. We used regression factor scores here as they predict the location of each individual on the factor. Results of this process are shown below. 
 
 ```{r adhd-ques-fa}
 adhd_ques_fa <- factanal(sapply(adhd_data[,c(4:21)], as.numeric), 
@@ -162,15 +173,18 @@ adhd_ques_fa <- factanal(sapply(adhd_data[,c(4:21)], as.numeric),
 adhd_ques_fa
 ```
 
+To simplify the results from our regressive factanal call, this visual helps to describe which factors were used to build an our latent variables. The value listed on the arrow pointing to the ADHD question is its correlation with the original patient's response. 
 
+Notice that none of the correlations are below 0.5 in factors 1 and 2. These are our most indicative questions for determining a patient's risk of attempting suicide. If we were looking to shorten the ADHD questionaire, these ADHD questions would be the best selection to retain predictive value in models. 
 
 ```{r adhd-fa-diag}
 fa.diagram(adhd_ques_fa$loadings)
 ```
 
 
-For MD questions we could see that 1st MD question has multiple sub questions as compared to 2nd and 3rd question. Now for these set of MD questions too, we will apply similar factor analysis as of ADHD questions. Test of the hypothesis that 3 factors are sufficient. The chi square statistic is 88.82 on 63 degrees of freedom. The p-value is 0.0178.
+From the source data, we can see that for MD questions only the first MD question has multiple sub questions or parts. Compared to the second and third question, which have no additional parts. We will not need to perform fator analysis on questions with no additional parts because there are no additional factors to analyze.
 
+We apply a similar factor analysis as of ADHD questions. Our hypothesis test showed that 3 factors were again sufficient. The chi square statistic is 88.82 on 63 degrees of freedom. The p-value is 0.0178. Significant to an alpha level below 0.05. Results of this test are shown below. 
 
 
 ```{r md-ques-fa}
@@ -187,7 +201,7 @@ md_ques_fa
 fa.diagram(md_ques_fa$loadings)
 ```
 
-In the next step we will remove all ADHD Question columns, ADHD Total, MD questions columns and MD TOTAL columns. Then we will add the new factors found above for ADHD and MD questions.
+In the next step we will remove all ADHD question columns, ADHD Total, MD questions columns and MD TOTAL columns. Then we will add the new factors found above for ADHD and MD questions.
 
 
 ```{r add-fact}
@@ -213,17 +227,23 @@ head(adhd_newdata)
 ```
 
 
+```{r}
+adhd_newdata.dims <- dim(adhd_newdata)
+dim_reduced <- (53-25)/53
+```
 
+The dimensions of this new data set are 175 observations of 25 variables. We have successfully reduced the number of variables by `r round(dim_reduced, 2)`% while still explaining most of the variation in the data. Future questionnaires could be reduced to those variables listed in our new data set if they were in need of reducing the number of ADHD questions. 
 
 ## Handling missing values
 
+When summarizing the data we discovered missing values for several of the variables. The variable psych med stood out the most since it was missing more than half of its data. Here, we visualize the percentage of missing values for all variables to compare to one another. Green bars indicate an insignificant level of missing values, blue could use imputation or another method to handle, and red is practically useless unless special precautions are taken during analysis.
 
 ```{r plot-missing}
 # plot missing values
 plot_missing(adhd_newdata)
 ```
 
-We can see from this chart that `Psych meds.` contributes to 67.43% of missing data which is maximum among all missing data in other columns. We will remove this column before imputation. We then impute values using MICE (Multivariate Imputation by Chained Equations) for columns having missing values.
+We can see from this chart that `Psych meds`, in red, contributes to 67.43% of the missing data which is the maximum among all missing data in other columns. We will remove this column before imputation. We then impute values using MICE (Multivariate Imputation by Chained Equations) for columns that contain missing values. 
 
 ```{r rename}
 # rename columns to apply mice
@@ -251,7 +271,6 @@ adhd_impute <- adhd_newdata %>% dplyr::select(-c(starts_with('ADHD_'), starts_wi
 adhd_impute <- complete(mice(data=adhd_impute, print=FALSE))
 summary(adhd_impute)
 ```
-
 
 
 ```{r merge}
@@ -288,16 +307,15 @@ head(adhd_newdata)
 #adhd_data <- complete(mice(data=adhd_data[,:53], method="pmm", print=FALSE))
 ```
 
-
+From here, we have imputed or removed variables that contained missing values and identified those factors that could explain most of the data with fewer variables. We continue with some preprocessing steps. 
 
 
 ## Preprocess using transformation
 
-In this transformation, we would first use dummyVars to create dummy variables for categorical features. Next we use center and scaling transformation.
+There are minor changes necessary to fit and feed the models in our analysis. In our first transformation, we use dummyVars to create dummy variables for categorical features. Next we center and scale the data so that models can evaluate the data on the same dimensional planes. Otherwise, we lose any chance predicting with accuracy in real-world settings. 
 
 ```{r transform}
 set.seed(622)
-1
 # create dummy variables for categorical features
 adhd_dummy <- dummyVars(Suicide ~ ., data = adhd_newdata) 
 adhd_dummy <- predict(adhd_dummy, newdata=adhd_newdata)
@@ -310,14 +328,19 @@ adhd_transformed <- adhd_dummy %>%
 
 # add Suicide column
 adhd_transformed$Suicide <- adhd_newdata$Suicide
+```
 
+We can review the transformations with the following table of values. These show all the variable's on the same scale with a center at zero. With this dataset it would be possible to supply data to the support vector machine and perform a proper clustering algorithm. 
+
+
+```{r adhd_transformed_head}
 head(adhd_transformed)
 ```
 
 
 ## Training and Test Partition
 
-In this step for data preparation we will partition the training dataset in training and validation sets using `createDataPartition` method from `caret` package. We will reserve 75% for training and rest 25% for validation purpose.
+In this step for data preparation we will partition the training dataset in training and validation sets using `createDataPartition` method from the `caret` package. We will reserve 75% for training and rest 25% for validation purpose.
 
 ```{r partition}
 set.seed(622)
@@ -335,12 +358,15 @@ testing <- adhd_data[-partition,]
 
 # Principal Component Analysis
 
-
-Principal Compenent Analysis (PCA) is one way for which we can reduce the dimensionality of a data set which would help increase the interpretability of the data while minimizing information loss. We're going to perform PCA for ADHD and MD response questions below while using scree plots to determine the numberof PCA's to keep. The Scree plot will display the eigenvalues in a downward curve, and order them from largest to smallest.
+Principal Compenent Analysis (PCA) is another way in which we can reduce the dimensionality of a data set while increasing the interpretability of the data and minimizing information loss. We are going to perform PCA for ADHD and MD response questions below while using scree plots to determine the numberof PCA's to keep. The Scree plot will display the eigenvalues in a downward curve, and order them from largest to smallest.
 
 Groups: 
-- All ADHD Questions
-- All MD Questions
+
+    * All ADHD Questions
+    * All MD Questions
+    * All Other
+
+We begin with the ADHD Questions and produce appropriately titled visualizations to explain each variable's contribution to predicting the risk of attempting suicide within this analysis. 
 
 
 ```{r pca}
@@ -349,13 +375,12 @@ adhd_ques_pca <- sapply(adhd_data[,c(4:21)], as.numeric)
 
 # create subset of MD Questions for PCA
 md_ques_pca <- sapply(adhd_data[,c(23:37)], as.numeric)
-
 ```
 
 
 ### ADHD
 
-First we will use the prcomp function to perform a prinicpal component analysis on the adhd response questions. We will also center and scale this dataset to ensure normality.
+First we will use the prcomp function to perform a principal component analysis on the adhd response questions. We will also center and scale once again to ensure normality and proper dimensionality.
 
 
 ```{r prcomp}
@@ -363,11 +388,11 @@ pca_adhd <- prcomp(adhd_ques_pca, scale. = TRUE, center=TRUE)
 
 ```
 
-We will use the factoextra library to display the results of our PCA. this library specializes in extracting and visualizing the out put of exploratory multivariate analysis. 
-Through this and a correlation table we can see the relationship between each ADHD response score and the Prinicple Components. 
-The list of PC's (sorted by descending impact on the variance of score) whos us the components that are the most impactful in grouping the respondents. 
-By viewing the associated plots and correlations we can see the ADHd response questions 4,8,9,10,16,17,18 are the most impactful on plot of PC1 and PC2 which indicates they should be used in initial modeling of this dataset.
-We can also see the factors that are most impactful for other principal components below.
+We will use the `factoextra` library to display the results of our PCA. this library specializes in extracting and visualizing the out put of exploratory multivariate analysis. Through this and a correlation table we can see the relationship between each ADHD response score and the Principle Components. 
+
+The list of PC's (sorted by descending impact on the variance of score) shows us the components that are the most impactful in grouping the respondents. By viewing the associated plots and correlations we can see the ADHd response questions `4,8,9,10,16,17,18` are the most impactful on plot of PC1 and PC2 which indicates they should be used in initial modeling of this dataset. 
+
+We can also see the factors that are most impactful for other principal components below. Ensure to read the plot titles for a high-level view of what each plot describes. 
 
 
 ```{r corr}
@@ -402,8 +427,7 @@ fviz_pca_var(pca_adhd,
              )
 ```
 
-We will repeat the process above on MD response questions to get a better understanding of which of these questions are the most impactful.
-we can see for PC1 and PC2 MD Q1h, 1j, 1g and Q2 have the greatest impact.
+We will repeat the process above on MD response questions to get a better understanding of which of these questions are the most impactful. We can see that for PC1 and PC2 MD Questions 'Q1h', 'Q1j', 'Q1g', and 'Q2' have the greatest impact.
 
 ### MD
 ```{r md-prcomp}
@@ -442,12 +466,11 @@ fviz_pca_var(pca_md,
 
 # Gradient Boosting: Suicide
 
-Assume you are modeling whether a patient attempted suicide (column AX). This is a binary
-target variable. Please use Gradient Boosting to predict whether a patient attempts suicides.
-Please use whatever boosting approach you deem appropriate. But please be sure to walk us
-through your steps.
+We assume we are modeling whether a patient attempted suicide codified in column AX. This known as a binary target variable. We use Gradient Boosting to predict whether a patient attempts suicides. Our specific approach uses an `XGBoost` of the `XGBoost` package library. 
 
-We remove the rows null values in the target column and drop the Non-subset Dx column because it had a lot of nulls as well. XGBoost needs data to be in a matrix so we convert the dataframes to numeric matricies. 
+Initially, we remove the rows null values in the target column and drop the Non-subset Dx column because it had a lot of nulls as well. XGBoost needs data to be in a matrix so we convert the dataframes to numeric matrices. 
+
+We choose `XGBoost` because it is one of the more efficient gradient boosting methods that have some natural strengths at improving accuracy when used with questionnaire data such as ours. When constructing decision trees, variables that improve accuracy are selected for and 'boosted' to create trees that maximize accuracy. It does this without concern for how the leaves of the decision tree, exemplified by our sub-questions, get split into the branches of the decisions. Ideally, it will help us boost the accuracy of our model when trying to predict if a patient may attempt suicide. We continue this method with the first step, a cross validation (CV) split. 
 
 ```{r gb}
 gb__train <-subset(training[complete.cases(training$Suicide), ], select= -`Non-subst Dx`)
@@ -461,9 +484,8 @@ gb_test <- sapply(subset(gb__test, select = -Suicide), as.numeric)
 
 ## CV Split
 
-We split the data into three folds for cross validation to imrove the ability of the model to generailze and help with overfitting. We create a function to help with parameter tunning and make use of the bayesOpt package.  
+We split the data into three folds for cross validation to improve the ability of the model to generalize and help with overfitting. We create a function to help with parameter tunning and make use of the `bayesOpt` package.  
 
-https://cran.r-project.org/web/packages/ParBayesianOptimization/vignettes/tuningHyperparameters.html
 
 ```{r cv-spl}
 Folds <- list(
@@ -503,6 +525,7 @@ scoringFunction <- function(max_depth, min_child_weight, subsample) {
 
 ```
 
+Our `bayesOpt` package contained a set of functions that allowed us to optimize the model further, in a sense to improve the model's ability to reduce error and thus, improve predictive accuracy. We also create a scoring function that we use to perform the boosting on our target and evaluate its performance over rounds of testing. The results are shown for reference. 
 
 ```{r gb1}
 set.seed(50)
@@ -522,12 +545,16 @@ optObj$scoreSummary
 print(getBestPars(optObj))
 ```
 
+In several cases our model's scoring function appears to have a roughly 50% chance of attempting suicide. However, these cases all had fewer rounds of testing, shorter time elapsed, and used nonoptimum routes in its prediction. This is corrected with other tests in which further testing is completed through more rounds with heavier boosting. This is likely to produce a modest increase in our accuracy during model building. 
+
 
 # Build Models
 
+We develop three main models including a K-Clustering Method, Gradient Boosting method, and Support Vector Machines (SVM). Each focuses on a particular strategy. Our clustering attempts to identify groups of variables that are similar and use them to assess a patient's risk of attempting suicide. Gradient Boosting constructs decision trees with an emphasis on returning the most accurate decision path and our Support Vector Machine uses linear regression to classify the factors into groups using hyperplanes and by assessing the classes likelihood of being our target variable.  
+
 ## Clustering Method
 
-We use K-nearest neighbor (KNN) to identify clusters of patients that share similar patterns that could help us predict our target variable. KNN works by identifying the "k" closest neighbors in the dataset. This works particularly well for classification.
+We use K-nearest neighbor (KNN) to identify clusters of patients that share similar patterns that could help us predict our target variable. KNN works by identifying the "k" closest neighbors in the dataset. This works particularly well for classification of factorized data, as our dataset happens to be. Results of this model's construction are shown below. 
 
 ```{r cluster method knn}
 set.seed(622)
@@ -579,14 +606,14 @@ accuracy <- round(conf.mat.knn$overall[[1]], 3)*100
 conf.mat.knn
 ```
 
-Our KNN model accuracy comes out to `r round(conf.mat.knn$overall[[1]], 3)*100`%
+Our KNN model accuracy comes out to `r round(conf.mat.knn$overall[[1]], 3)*100`%. We note that the ideal number of k was experimentally determined by running through several simulated model and testing the accuracy of each. The most accurate model was our final choice. 
 
 
 ## Support Vector Machine
 
-The objective of the support vector machine algorithm is to find a hyperplane in an N-dimensional space (N being the number of features) that classifies the data points. Hyperplanes are decision boundaries to classify the data points. Data points that falls on either side of the hyperplane can be qualified for different classes. Support vectors are data points that are closer to the hyperplane and effect the position and orientation of the hyperplane. Using these support vectors, we do maximize the margin of the classifier.
+The objective of the support vector machine algorithm is to find a hyperplane in an N-dimensional space (N being the number of features) that classifies the data points. Hyperplanes are decision boundaries to classify the data points. Data points that fall on either side of the hyperplane can qualify as different classes. Support vectors are data points that are closer to the hyperplane and effect the position and orientation of the hyperplane. Using these support vectors, we maximize the margin of the classifier.
 
-There are number of R packages available to implement SVM. The train function can be used for SVM using methods as svmRadial, svmLinear and svmPoly that fit different kernels.
+There are number of R packages available to implement SVM. The `train` function can be used for SVM using methods as `svmRadial`, `svmLinear` and `svmPoly` that fit different kernels. The functions we focus on are available in the `caret` package. 
 
 ```{r train-test}
 # partitioning for train and test
@@ -642,11 +669,11 @@ svm_resamps <- resamples(list(Linear = svm_lin_fit, Radial = svm_rad_fit, Poly =
 summary(svm_resamps)
 ```
 
-We can see out Support Vector Machine Linear, Radial, and Poly fit had median accuracy rates of .631, .769 and .769 respectively indicating of radial or poly SVM should be chosen for future modeling.
+We can see our Support Vector Machine Linear, Radial, and Poly fit had median accuracy rates of .631, .769 and .769 respectively indicating of radial or poly SVM should be chosen for future modeling.
 
 **Most Important Features**
 
-We can see most Important features came out from the SVM are Abuse, Alcohol and MD Factor 1. 
+To better comprehend how the model came to it conclusion, it is beneficial to know which factors influence the target variable most. A plot of the top variables and their importance is displayed for review and comparison. 
 
 ```{r top-imp}
 # Important features
@@ -655,9 +682,12 @@ plot(imp_vars, top=10)
 ```
 
 
+Abuse, alcoholism, and Mood Disorder Question 1 were the most important factors in the SVM models. 
+
 ## Gradient Boosted 
 
-We use the information from the above function to fit our final model, make predictions, and evaluate results.
+We use the information from the above function to fit our final model, make predictions, and evaluate results. This gradient boost relys on the data preparation and cross-validation split from our previous sections. 
+
 ```{r grad-boost}
 dtrain <- xgb.DMatrix(gb__train, label=y_label_tr)
 dtest <- xgb.DMatrix(gb_test, label=y_label_test)
@@ -686,7 +716,7 @@ This produced an accuracy rate of 77.5%
 
 # Model Performance
 
-We can see that model SVM models has the best accuracy at 77.5% when applied to the test dataset. We could improve these models through more through feature selection via PCA or other methods and by focusing on feature engineering by using what was identified by these methods.
+We can see that model Gradient Boosted model has the best accuracy at 77.5% when applied to the test dataset. We could improve these models through more through feature selection via PCA or other methods and by focusing on feature engineering by using what was identified by these methods.
 
 
 # Conclusion
@@ -696,6 +726,8 @@ Through the use of feature engineering and different models we can see that ther
 
 
 # References
+
+https://cran.r-project.org/web/packages/ParBayesianOptimization/vignettes/tuningHyperparameters.html
 
 https://towardsdatascience.com/what-is-the-difference-between-pca-and-factor-analysis-5362ef6fa6f9
 
