--- a/FinalProject/Data622_FinalProject.Rmd
+++ b/FinalProject/Data622_FinalProject.Rmd
@@ -29,6 +29,17 @@ library(reshape2)
 library(ggplot2)
 library(DataExplorer)
 library(caret)
+library(tidyverse)
+library(DataExplorer)
+library(mice)
+library(MASS)
+library(e1071)
+library(tree)
+library(randomForest)
+library(corrplot)
+library(kableExtra)
+library(htmltools)
+library(fastDummies)
 ```
 
 
@@ -289,6 +300,133 @@ testing <- income_data_tf[-partition,]
 # Build Models
 
 Decide on the models we should use and share the workload.
+
+## Logistic Regression
+
+First we're prepping the data to convert factors into dummy variables within the training and test sets.
+
+```{r}
+# https://www.marsja.se/create-dummy-variables-in-r/
+library(fastDummies)
+set.seed(622)
+training.dum <- dummy_cols(training, 
+                           select_columns = c("workclass",
+                                              "marital_status",
+                                              "occupation", 
+                                              "relationship", 
+                                              "race", 
+                                              "sex", 
+                                              "native_country"),
+                           remove_selected_columns = TRUE)
+```
+
+```{r}
+set.seed(622)
+testing.dum <- dummy_cols(testing, 
+                           select_columns = c("workclass",
+                                              "marital_status",
+                                              "occupation", 
+                                              "relationship", 
+                                              "race", 
+                                              "sex", 
+                                              "native_country"),
+                           remove_selected_columns = TRUE)
+```
+
+
+```{r}
+# https://stats.idre.ucla.edu/r/dae/logit-regression/
+# https://www.datacamp.com/community/tutorials/logistic-regression-R
+
+logit.income <- glm(income ~., data = training.dum, family = "binomial")
+summary(logit.income)
+```
+
+```{r}
+logit.probs <- predict(logit.income, type = "response")
+logit.probs[1:5]
+```
+
+```{r}
+logit.pred <- ifelse(logit.probs > 0.5, "Up", "Down")
+```
+
+
+
+## Decision Trees
+
+In a decision tree model the data is split into distinct options of 'yes' or 'no' based on parameters that make the options possible. These splits are called nodes and the decisions made at them can be mapped. For example, we provide a small decision tree that shows how decisions can be made based on credit history, coapplicant income, and property area.
+
+```{r}
+# Check Number of Levels for each Factor
+training %>% map(levels) %>% map(length)
+```
+
+```{r dt-model}
+# Decision Trees model
+#set.seed(622)
+#tree.income = tree(income~., data=training)
+#summary(tree.income)
+#plot(tree.income)
+#text(tree.income, pretty = 0)
+```
+
+We also review which variables are most important for making decisions in our model.These are shown in the plot as a straight line extending from the axis to the length of its importance to the model. Accuracy was also used to select the optimal model using the largest value where our final tree depth  used for this model is 1. 
+
+
+```{r Decision}
+# Decision Trees model
+#set.seed(622)
+#control <- trainControl(method="repeatedcv", number=10, repeats=3, search='grid')
+#metric <- "Accuracy"
+#tunegrid <- expand.grid(.maxdepth=c(1:15))
+#tree.income <- train(income~., data = training, method="rpart2", tuneGrid=tunegrid, trControl=control)
+#print(tree.income)
+#plot(tree.income)
+
+#treeImp <- varImp(tree.income, scale = FALSE)
+#plot(treeImp, top = 10)
+```
+
+```{r dt-pred}
+# prediction from decision tree model
+#tree.predict <- predict(tree.income, testing,type='raw')
+#mean(tree.predict == testing$income) # accuracy
+#conf.mat.decisiontree <- confusionMatrix(tree.predict, testing$income)
+#conf.mat.decisiontree
+```
+
+Our decision Tree model accuracy comes out as ~81%. As shown in the confusion matrix, there is room for improvement in this model's sensitivity among other variables. We try to improve this with the random forest model. 
+
+## Random Forests
+
+A random forest model works by building a number of decision trees and selecting the most accurate decisions from the trees. These decisions are randomized and in our case, tries 3 variables at each node or split in the tree. We set our number of trees to 500 and train the model to predict loan status. We review the variables of most importance in the model and in this case, give the model a boost to improve accuracy. 
+
+```{r rf}
+set.seed(622)
+# Random Forest model
+control <- trainControl(method="repeatedcv", number=10, repeats=3, search="grid")
+metric <- "Accuracy"
+tunegrid <- expand.grid(.mtry=c(1:15))
+rf.income <- train(income~., data = training, method="rf",tuneGrid=tunegrid, trControl=control)
+print(rf.income)
+plot(rf.income)
+
+rfImp <- varImp(rf.income, scale = FALSE)
+plot(rfImp, top = 10)
+```
+
+```{r rf-pred}
+# prediction from random forest model
+rf.predict <- predict(rf.loans, testing,type='raw')
+mean(rf.predict == testing$Loan_Status) # accuracy
+conf.mat.randomforest <- confusionMatrix(rf.predict, testing$income)
+conf.mat.randomforest
+```
+
+Our random Forest model accuracy comes out as ~82%. This is an improvement upon our decision model and the sensitivity did increase as we desired. 
+
+
 
 # Model Performance
 
